--- a/src/main/resources/org/example/spellcheckalgorithm/popup.fxml
+++ b/src/main/resources/org/example/spellcheckalgorithm/popup.fxml
@@ -2,21 +2,24 @@
 
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.RowConstraints?>
+
+<?import javafx.scene.control.ScrollPane?>
 <VBox xmlns:fx="http://javafx.com/fxml" fx:controller="org.example.spellcheckalgorithm.PopupController">
-    <GridPane fx:id="dpGrid" gridLinesVisible="true" style="-fx-padding: 10;">
-        <padding>
-            <Insets top="20" left="20" bottom="20" right="20"/>
-        </padding>
-        <columnConstraints>
-            <ColumnConstraints minWidth="40" prefWidth="50" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="40" prefHeight="50" />
-        </rowConstraints>
-    </GridPane>
+    <ScrollPane fx:id="scrollPane" maxHeight="Infinity">
+        <GridPane fx:id="dpGrid" gridLinesVisible="true" >
+            <padding>
+                <Insets top="20" left="20" bottom="20" right="20"/>
+            </padding>
+            <columnConstraints>
+                <ColumnConstraints minWidth="40" prefWidth="50" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="40" prefHeight="50" />
+            </rowConstraints>
+        </GridPane>
+    </ScrollPane>
+
 </VBox>
